// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckoutErrorBoundary stories snapshot > ComponentError story renders and matches snapshot 1`] = `
<div
  data-error-boundary-harness="true"
>
  <div
    class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90"
    data-slot="alert"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <div
      class="col-start-2 line-clamp-1 min-h-4 tracking-tight text-xl font-bold"
      data-slot="alert-title"
    >
      Component temporarily unavailable
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 [&_p]:leading-relaxed text-xl font-bold"
      data-slot="alert-description"
    >
      This section couldn't load properly. You can continue with checkout or try refreshing the page.
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline rounded-md gap-1.5 has-[>svg]:px-2.5 ml-2 h-auto p-0 font-bold"
        data-size="sm"
        data-slot="button"
        data-variant="link"
      >
        Try again
      </button>
    </div>
  </div>
</div>
`;

exports[`CheckoutErrorBoundary stories snapshot > ComponentErrorWithoutRetry story renders and matches snapshot 1`] = `
<div
  data-error-boundary-harness="true"
>
  <div
    class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90"
    data-slot="alert"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <div
      class="col-start-2 line-clamp-1 min-h-4 tracking-tight text-xl font-bold"
      data-slot="alert-title"
    >
      Component temporarily unavailable
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 [&_p]:leading-relaxed text-xl font-bold"
      data-slot="alert-description"
    >
      This section couldn't load properly. You can continue with checkout or try refreshing the page.
    </div>
  </div>
</div>
`;

exports[`CheckoutErrorBoundary stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  data-error-boundary-harness="true"
>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm mx-auto max-w-2xl"
    data-slot="card"
  >
    <div
      class="flex min-h-[400px] flex-col items-center justify-center p-8 text-center"
      data-slot="card-content"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert mb-4 h-12 w-12 text-destructive"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <h2
        class="tracking-tight text-left mb-2 text-xl font-bold text-destructive"
      >
        Checkout Temporarily Unavailable
      </h2>
      <p
        class="leading-7 [&:not(:first-child)]:mt-6 text-left mb-6 max-w-md text-muted-foreground"
      >
        We're experiencing some technical difficulties with the checkout process. Your cart items are safe and saved.
      </p>
      <div
        class="flex gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
          data-size="default"
          data-slot="button"
          data-variant="default"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-refresh-cw h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
            />
            <path
              d="M21 3v5h-5"
            />
            <path
              d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
            />
            <path
              d="M8 16H3v5"
            />
          </svg>
          Try Again
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Return to Cart
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckoutErrorBoundary stories snapshot > NoError story renders and matches snapshot 1`] = `
<div
  data-error-boundary-harness="true"
>
  <div
    class="p-4 border rounded"
  >
    <h2
      class="text-lg font-semibold"
    >
      Checkout Form
    </h2>
    <p
      class="text-sm text-muted-foreground"
    >
      No errors here!
    </p>
  </div>
</div>
`;

exports[`CheckoutErrorBoundary stories snapshot > WithCustomFallback story renders and matches snapshot 1`] = `
<div
  data-error-boundary-harness="true"
>
  <div
    class="p-4 border border-destructive rounded"
  >
    <h2
      class="text-xl font-bold text-destructive"
    >
      Custom Error Message
    </h2>
    <p
      class="text-sm text-muted-foreground"
    >
      This is a custom fallback UI
    </p>
  </div>
</div>
`;
